[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jdgenometracks"
description = "A Python package for plotting genomic data."
readme = "README.md"
version = "0.2"
dependencies = ["pandas", "numpy", "matplotlib", "plotly>=5.3.0", "scipy"]
requires-python = ">=3.8"
authors = [{ name = "Justin Delano", email = "jdelano@g.harvard.edu" }]

[project.optional-dependencies]
dev = ["black", "isort"]

[project.urls]
Homepage = "https://github.com/justin-delano/jdgenometracks"
